fix tailwind postcss issue
Signed-off-by: Deepak Kumar <notwho53@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.7",
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.0.7"
   }
 }
